Fix overflow on progress bar

--- a/src/app/modules/shared/components/acct-card/acct-card.component.scss
+++ b/src/app/modules/shared/components/acct-card/acct-card.component.scss
@@ -58,6 +58,7 @@
     height: .5rem;
     border: 1px solid var(--black);
     border-radius: var(--br-lrg);
+    overflow: hidden;
 
     & .progress {
       width: 70%;
